# openshift-mcp-server

./: .gitignore  CLAUDE_INTEGRATION.md  COPILOT_INTEGRATION.md  DEMO_COMPLETE_SUCCESS.md  DEMO_SAMPLE_GAMING_APP.md  DEPLOYMENT.md  Dockerfile  Dockerfile.build-macos  Dockerfile.build-new  Dockerfile.container-runtime  Dockerfile.minimal  Dockerfile.openshift  Dockerfile.optimized  Dockerfile.privileged  FINAL_FIX_SUMMARY.md  INTELLIGENT_CONTAINER_WORKFLOWS.md  MCP_BEST_PRACTICES_COMPLIANCE.md  Makefile  OPTIMIZATION.md  QUICKSTART.md  README-OpenShift-AI.md  README.md  TROUBLESHOOTING.md  VSCODE_INTEGRATION.md  claude-desktop-config.json  claude-mcp-proxy.js  demo-sample-gaming-app.sh  deploy.sh  fix-openshift-scc.sh  fix-security.sh  gaming-app-manifests.yaml  go.mod  go.sum  mcp-http-bridge.js  package-lock.json  package.json  simple-mcp-bridge.js  test-bridge.js  test-exact-flow.js  test-mcp-best-practices.sh  (+3 more)
cmd/integrated-server/: main.go
cursor-integration/: CURSOR_SETUP_GUIDE.md  EXAMPLES.md  README.md  VSCODE_INTEGRATION.md
examples/: complete-pipeline.yaml
manifests/: configmap.yaml  deployment-container-runtime.yaml  deployment-openshift-scc.yaml  deployment-privileged.yaml  deployment-secure-runtime.yaml  deployment.yaml  namespace.yaml  rbac.yaml  scc-privileged.yaml  secrets.yaml  service.yaml
pkg/cicd/: git_watcher.go  (+3 more)
python/: pyproject.toml  requirements-minimal.txt  requirements-optimized.txt  requirements.txt
python/kubernetes_mcp_server/: export_pytorch_model.py  inference_server.py  inference_server_minimal.py  kubernetes_mcp_server.py
(+55 files in other folders)
